tags/3.6/bezantrakta/order/admin/order.rst
######
Заказы
######

**************
Список заказов
**************

Фильтры
=======

* текстовый поиск по идентификатору заказа в СПБ и реквизитам покупателя (ФИО, телефон, email)
* фильтр по статусу заказа
* фильтр по способу получения билетов
* фильтр по способу оплаты заказа
* фильтр по событию, к которому привязан заказ
* фильтр по дате и времени события
* фильтр по СПБ, к которому привязано событие

Действия
========

* **Импорт'** или **экспорт** заказов - возможность импортировать/экспортировать заказы в файлы разных форматов (**CSV**, **XLS** или **ODS**):

  * Сначала нужно отфильтровать список заказов для экспорта в блоке "**Фильтр**" над таблицей заказов. Если этого не сделать, будут экспортированы вообще все имеющиеся заказы, что, как правило, не требуется.
    Например, отфильтровать заказы **по статусу** (только *подтверждённые*), **по дате события** (первое и последнее число нужного месяца) и **по сервису продажи билетов** (*СуперБилет* или *Радарио*).
  * Нажать на кнопку "**Экспорт**" справа вверху над блоком фильтров.
  * На открывшейся странице выбрать в списке тип файла для экспорта.
  * Нажать на кпонку "**Экспортировать**" и сохранить полученный файл на диск.

  Заказы при экспорте *сортируются по дате события по убыванию*.

.. only:: dev

  Действия с выбранными заказами
  ==============================

  * удалить (только для суперадминистраторов)

Столбцы в таблице заказами
==========================

* **ID заказа** - идентификатор заказа в СПБ.

* **Дата и время заказа**

* **Сумма** - сумма цен на билеты в заказе БЕЗ учёта любых возможных наценок/скидок.

* **Всего** - общая сумма заказа с учётом возможных наценок/скидок (равна сумме цен на билеты, если наценок/скидок не было).

* **Билетов** - количество билетов в заказе (не больше максимального количества билетов в заказе из настороек СПБ).

* **ФИО** - реквизиты покупателя (фамилия, имя, отчество).

* **Email** - реквизиты покупателя (email).

При клике на email открывается почтовая программа с возможностью отправить электронное сообщение покупателю (тема по умолчанию - ``Сообщение о заказе № НОМЕР_ЗАКАЗА``).

* **Телефон** - реквизиты покупателя (телефон).

При клике на телефон на мобильном устройстве открывается приложение для звонков, в котором можно позвонить покупателю.

* **Получение билетов**

* **Оплата билетов**

* **Статус** заказа.

* **Сервис продажи билетов**, к которому привязано событие, в котором сдалан заказ.

******************************
Страница редактирования заказа
******************************

Действия
========

* **Возврат** стоимости заказа покупателю (*только для подтверждённых заказов*).

  При нажатии на кнопку открывается промежуточная сттаница, на которой нужно:

  * Ввести сумму возврата (меньше или равно сумме заказа).
  * Выбрать причину возврата (по умолчанию - запрос покупателя).

* **Выслать повторно** email-уведомление о заказе покупателю (*только для подтверждённых заказов*).

  Электронные PDF-билеты будут сгенерированы заново и вложены в сообщение, если это необходимо.

* **Смотреть на сайте** - ссылка на страницу конкретного заказа на сайте (шаг 3 заказа билетов с информацией об успешном заказе).

Атрибуты заказа
===============

* **Сайт**, к которому привязано событие, в котором сделан заказ.

* **Сервис продажи билетов**, к которому привязано событие, в котором сделан заказ.

* **Уникальный ID заказа** - случайный уникальный идентифкатор заказа (UUID), формируемый в процессе оформления заказа.

* **ID заказа**, полученный от СПБ в процессе оформления заказа.

* **Событие**, в котором сделан заказ.

* **ID события** в СПБ.

* **Дата и время заказа**

* **Получение билетов** - выбранный покупателем способ получения билетов.

* **Оплата билетов** - выбранный покупателем способ оплаты билетов.

* **ID онлайн-оплаты** - идентификатор онлайн-оплаты, полученный от СОО в процессе оформления заказа. Если покупатель не выбирал онлайн-оплату, это поле остаётся пустым.

* **Статус** - текущий статус заказа.

Реквизиты покупателя
====================

* **ФИО**

* **Email**

* **Телефон**

Билеты
======

* **Билетов** - количество билетов в заказе.

* **Сумма** - сумма цен на билеты в заказе БЕЗ учёта любых возможных наценок/скидок.

* **Всего** - общая сумма заказа с учётом возможных наценок/скидок (равна сумме цен на билеты, если наценок/скидок не было).

Список билетов
==============

* **Уникальный идентификатор билета** (UUID), формируемый в процессе оформления заказа.

* **Сидячее место** - билет на сидячее место или билет со свободной рассдакой (например, *танцпол*, *фанзона* и т.п.).

Статус места задаётся в схеме зала с помощью атрибута ``data-is-fixed``.

* **Цена** билета.

* **Штрих-код** билета.

В процессе оформления заказа обрботчик пытается получить штрих-код из СПБ при создании нового заказа. Если штрих-код по каким-то причинам получить не удалось - он генерируется случайным образом.

* **ID сектора** - идентфикатор сектора в СПБ.

* **Сектор** - название сектора в СПБ (например, *партер* или *танцпол*).

* **ID ряда** - идентфикатор ряда в СПБ.

* **ID места** - идентфикатор места в СПБ.

* **Место** - название места в СПБ.

  * В СуперБилете идентфикатор места *совпадает* с его названием (например, ID ``1`` для первого места в первом ряду).
  * В Радарио идентфикатор места *отличается* от его названия (например, ID ``22`` для первого места в первом ряду).

.. only:: dev

  ******
  Модели
  ******

  Заказы билетов
  ==============
  .. autoclass:: bezantrakta.order.models.Order

  Билеты в заказах
  ================
  .. autoclass:: bezantrakta.order.models.OrderTicket

  Кэширование заказов
  ===================
  .. autoclass:: bezantrakta.order.cache.OrderCache

  *************
  Представления
  *************

  Шаг 1 заказа билетов
  ====================
  Страница события и выбор билетов на схеме зала.

  .. automodule:: bezantrakta.order.views.order_step_1

  Шаг 2 заказа билетов
  ====================
  Ввод контактов покупателя и выбор способа доставки/оплаты билетов.

  .. automodule:: bezantrakta.order.views.order_step_2

  Шаг 3 заказа билетов
  ====================
  Подтверждение успешного заказа с выводом информации о нём.

  .. automodule:: bezantrakta.order.views.order_step_3
